--- a/templates/simple/index.html
+++ b/templates/simple/index.html
@@ -4,28 +4,19 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="UTF-8">
-        <title>Your Name Here</title>
-        <meta property="og:title" content="Your Name's Links" />
-        <meta property="og:site_name" content="yourdomain.com" />
-        <meta property="og:description" content="A list of Your Name's most important links." />
+        <title>isacubz</title>
+        <meta property="og:title" content="isacubz" />
+        <meta property="og:site_name" content="aboutme.isacubz.tk" />
+        <meta property="og:description" content="my bio." />
         <link rel="stylesheet" href="css/style.css">
         <meta name="theme-color" content="var(--bgColor)">
     </head>
     <body>
             <!--Page Content Below-->
-        <img id="userPhoto" class="animated rubberBand fast" src="images/profile-picture.webp" alt="Your Name's Photo">
-        <h1 class="animated jello">Your Name</h1>
-        <a href="https://www.instagram.com/" id="userName" class="animated fadeIn delay-1s fast">Instagram: @yourname</a>
+        <h1 class="animated jello">isacubz</h1>
         <div id="links" class="animated fadeInLeft delay-1s">
-            <a class="link" href="https://domain.com/" target="_blank">First Link</a>
-            <a class="link" href="https://domain.com/" target="_blank">Second Link</a>
-            <a class="link" href="https://domain.com/" target="_blank">Third Link</a>
-            <a class="link" href="https://domain.com/" target="_blank">Fourth Link</a>
-            <a class="link" href="https://domain.com/" target="_blank">Fifth Link</a>
-        </div>
-        
-        <a href="mailto:you@email.com" class="animated fadeIn delay-3s slow" id="userName">Email Me</a>
-            <!--Optional Attribution Repo Link-->
-        <a class="atrib" href="https://github.com/mackenly/quickbiolinks">Built With QuickBioLinks ❤️</a>
+            <a class="link" href="https://instagram.com/isacubz" target="_blank">instagram</a>
+            <a class="link" href="https://t.me/isacubz/" target="_blank">telegram</a>
+            <a class="link" href="mailto:askme@isacubz.tk" target="_blank">email me</a>
     </body>
 </html>
