--- a/templates/simple/index.html
+++ b/templates/simple/index.html
@@ -6,17 +6,20 @@
         <meta charset="UTF-8">
         <title>isacubz</title>
         <meta property="og:title" content="isacubz" />
-        <meta property="og:site_name" content="aboutme.isacubz.tk" />
-        <meta property="og:description" content="my bio." />
+        <meta property="og:site_name" content="isacubz.tk" />
+        <meta property="og:description" content="isacubz's links" />
         <link rel="stylesheet" href="css/style.css">
         <meta name="theme-color" content="var(--bgColor)">
     </head>
     <body>
             <!--Page Content Below-->
-        <h1 class="animated jello">isacubz</h1>
-        <div id="links" class="animated fadeInLeft delay-1s">
+        <h1 class="animated jello">isacubz's links</h1>
+        <div id="links" class="animated fadeInLeft delay-0.5s">
             <a class="link" href="https://instagram.com/isacubz" target="_blank">instagram</a>
             <a class="link" href="https://t.me/isacubz/" target="_blank">telegram</a>
+            <a class="link" href="https://konect.gg/isacubz" target="_blank">my setup</a>
+            <a class="link" href="https://anilist.co/user/tabex/" target="_blank">animes i watch</a>
             <a class="link" href="mailto:askme@isacubz.tk" target="_blank">email me</a>
+            
     </body>
 </html>
